# torchat2

./: .gitignore  Cargo.toml  INTEGRATION_COMPLETE.md  PROJECT_PROPOSAL.md  README.md  SETUP.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/torchat/app/: TorChatApplication.kt
android/app/src/main/java/com/torchat/app/crypto/: TorChatCore.kt
android/app/src/main/java/com/torchat/app/receiver/: BootReceiver.kt  NotificationReceiver.kt
android/app/src/main/java/com/torchat/app/service/: TorService.kt  VoiceCallService.kt
android/app/src/main/java/com/torchat/app/tor/: TorManager.kt
android/app/src/main/java/com/torchat/app/ui/: IncomingCallActivity.kt  MainActivity.kt
android/app/src/main/java/com/torchat/app/ui/navigation/: Navigation.kt
android/app/src/main/java/com/torchat/app/ui/screens/: ChatScreen.kt  HomeScreen.kt  Screens.kt
android/app/src/main/java/com/torchat/app/ui/viewmodels/: ViewModels.kt
android/app/src/main/java/com/torchat/app/voice/: AudioStreamManager.kt  OpusCodec.kt  VoiceCallManager.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml  network_security_config.xml
crates/torchat-cli/: Cargo.toml
crates/torchat-cli/src/: commands.rs  main.rs
crates/torchat-core/: Cargo.toml
crates/torchat-core/src/: error.rs  lib.rs  logging.rs
crates/torchat-core/src/crypto/: aead.rs  group_crypto.rs  keys.rs  mod.rs  ratchet.rs  rotation.rs
crates/torchat-core/src/identity/: auto.rs  mod.rs  onion.rs
crates/torchat-core/src/messaging/: daemon.rs  file_transfer.rs  group_gossip.rs  group_mesh.rs  group_session.rs  message.rs  mod.rs  relay.rs  session.rs  stream_transfer.rs
crates/torchat-core/src/protocol/: mod.rs  packet.rs  types.rs
crates/torchat-core/src/storage/: database.rs  mod.rs  offline_queue.rs  schema.rs
crates/torchat-core/src/tor/: connection.rs  controller.rs  mod.rs  service.rs
crates/torchat-core/src/voice/: mod.rs
crates/torchat-core/tests/: integration_tests.rs  onion_self_test.rs  p2p_diagnostic.rs  voice_tests.rs
crates/torchat-jni/: Cargo.toml
crates/torchat-jni/src/: lib.rs
crates/torchat-relay/: Cargo.toml
crates/torchat-relay/src/: main.rs
crates/torchat-web/: Cargo.toml
crates/torchat-web/public/: groups.js  index.html
crates/torchat-web/src/: api.rs  handlers.rs  lib.rs  main.rs  models.rs
crates/torchat-web/tests/: websocket_tests.rs
