[package]
name = "torchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for TorChat 2.0 - anonymous, end-to-end encrypted messaging over Tor"

[dependencies]
# Cryptography (spec section 5)
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
hmac.workspace = true
hkdf.workspace = true
pbkdf2.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Encoding
base32.workspace = true
base64.workspace = true
hex.workspace = true

# Time
chrono.workspace = true

# Async
tokio.workspace = true

# Storage
rusqlite.workspace = true

# Audio codec (optional)
audiopus = { workspace = true, optional = true }

# System info
hostname.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
default = []
voice = ["audiopus"]
