[package]
name = "torchat-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
torchat-core.path = "../torchat-core"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs", "limit"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = { workspace = true }
base64 = "0.22"
bincode = { workspace = true }
urlencoding = "2.1"

# Multipart form handling
axum-extra = { version = "0.9", features = ["multipart"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Also expose as a library for integration tests
[lib]
name = "torchat_web"
path = "src/lib.rs"

[[bin]]
name = "torchat-web"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde_json = "1"
http = "1"
